--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,25 @@
 {
-	"port" : 3000
+	"port": 3000,
+	"objects": [
+		"Астрахань",
+		"В. Баскунчак",
+		"Знаменск",
+		"Лиман",
+		"НО Байбек",
+		"НО Бакланье",
+		"НО Буруны",
+		"НО Буруны (Ростелеком)",
+		"НО Верхнелебяжье",
+		"НО Дрофиный",
+		"НО Мумра",
+		"НО Образцово-Травино",
+		"НО Разино",
+		"НО Рынок",
+		"НО Солодники",
+		"Тамбовка",
+		"Труд Фронт",
+		"Удачное",
+		"Черный Яр",
+		"Яр-Базар"
+	]
 }
