--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "nconf": "^0.10.0"
+    "nconf": "^0.10.0",
+    "ws": "^5.2.0"
   }
 }
