--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "nconf": "^0.10.0",
+    "serialport": "^6.2.1",
     "ws": "^5.2.0"
   }
 }
